Feature: Implement SEO enhancements across multiple pages and update title and meta description in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700;800;900&display=swap" rel="stylesheet">
 
-  <title>Element K</title>
+  <title>Open Access Journals in India - ELK Asia Pacific Journals</title>
+  <meta name="description" content="ELK Asia Pacific Journals is Expanding Literature Knowledge through Open Access International Journals." />
 </head>
 
 <body>
